--- a/small/small.ioc
+++ b/small/small.ioc
@@ -10,18 +10,20 @@ Mcu.Family=STM32F0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IPNb=4
+Mcu.IP3=USART1
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F042F4Px
 Mcu.Package=TSSOP20
 Mcu.Pin0=PA2
 Mcu.Pin1=PA3
 Mcu.Pin2=PB1
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=VP_SYS_VS_PINREMAP
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin3=PA9
+Mcu.Pin4=PA10
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042F4Px
@@ -33,6 +35,10 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+PA10.Mode=Asynchronous
+PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
@@ -41,6 +47,8 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA9.Mode=Asynchronous
+PA9.Signal=USART1_TX
 PB1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB1.GPIO_Label=LED
 PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
@@ -78,7 +86,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_CAN_Init-CAN-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_Init-USART2-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.CECFreq_Value=32786.88524590164
 RCC.FamilyName=M
 RCC.HSICECFreq_Value=32786.88524590164
@@ -86,10 +94,12 @@ RCC.IPParameters=CECFreq_Value,FamilyName,HSICECFreq_Value,PLLCLKFreq_Value,TimS
 RCC.PLLCLKFreq_Value=16000000
 RCC.TimSysFreq_Value=8000000
 RCC.VCOOutput2Freq_Value=8000000
-USART2.IPParameters=VirtualMode-Asynchronous
+USART1.BaudRate=115200
+USART1.IPParameters=VirtualMode,BaudRate
+USART1.VirtualMode=VM_ASYNC
+USART2.BaudRate=250000
+USART2.IPParameters=BaudRate,VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-VP_SYS_VS_PINREMAP.Mode=PINREMAP
-VP_SYS_VS_PINREMAP.Signal=SYS_VS_PINREMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
